--- a/frontend/src/components/menu/menu.css
+++ b/frontend/src/components/menu/menu.css
@@ -1,8 +1,10 @@
 .menu-container{
     grid-column: 6/8;
     grid-row: 7/10;
-    margin: 1em;
+    margin: 0.5em;
     background-color: white;
     font-size: 24px;
+    box-shadow: 1px 1px 3px black;
+
 }
 
