--- a/frontend/src/components/reservation/reservation.css
+++ b/frontend/src/components/reservation/reservation.css
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns:repeat(5, 20%);
     grid-template-rows: repeat(3, 33%);
+    box-shadow: 1px 1px 3px black;
 }
 
 .reservation-btn-container{
