--- a/frontend/src/components/staff/staff.css
+++ b/frontend/src/components/staff/staff.css
@@ -1,9 +1,11 @@
 .staff-container{
     grid-column: 4/6;
     grid-row: 7/10;
-    margin: 1em;
+    margin: 0.5em;
     background-color: white;
     font-size: 24px;
+    box-shadow: 1px 1px 3px black;
+
 }
 
 .text{
